test/sh/error/declare/assign_mismatch_var_type.sk
x := 0

z: Bool = x
